--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "verbose": true,
+  "jest": {
   "dependencies": {
     "react": "^16.14.0",
     "react-dom": "^16.0.0",
