--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
   },
+  module.exports = {
+  presets: [
+    '@babel/preset-env',
+    ['@babel/preset-react', {runtime: 'automatic'}],
+  ],
+};
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
