--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "react-test-renderer": "^18.2.0"
   }
 }
